[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panorama360"
version = "1.0.0"
description = "Local desktop application for creating seamless cylindrical 360-degree panoramas"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "CS-Fasih" }]
dependencies = [
    "numpy>=1.26,<3",
    "opencv-contrib-python-headless>=4.10,<5",
    "Pillow>=10,<13",
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
]

[project.gui-scripts]
panorama360 = "panorama360.app:main"

[tool.setuptools.packages.find]
include = ["panorama360*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
